--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "glitch-hello-node",
-  "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
+  "name": "itchingdicovery",
+  "version": "1.0.0",
+  "description": "Discover & upload your Scratch projects!",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -12,16 +12,5 @@
     "body-parser": "^1.20.2",
     "sync-fetch": "^0.5.2",
     "apicache": "^1.6.3"
-  },
-  "engines": {
-    "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-node"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch"
-  ]
+  }
 }
